Update content for statement of truth error and fix defendants response issues

--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -50,22 +50,16 @@
 
 
 {% macro fullResponseFragment() %}
-  {% if(directionsQuestionnaireEnabled) %}
-    <h2 class="heading-medium">{{ t('Full response') }}</h2>
-    <p>{{ internalLink(t('Download their full response and hearing requirements'), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId })) }}(PDF).</p>
-  {% else %}
-    <h2 class="heading-medium">{{ t('Full response') }}</h2>
-    <p>{{ internalLink(t('Download their full response'), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId })) }}(PDF).</p>
-  {% endif %}
-{% endmacro %}
-
-{% macro downloadDQs() %}
   {% if dqsEnabled %}
-    <div class="form-group">
-      <h3 class="heading-small">{{ t('Full response') }}</h3>
-      {{ internalLink(t('Download their full response and hearing requirements'), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }), 'block') }}
-    </div>
+    {% set label = 'Download their full response and hearing requirements' %}
+  {% else %}
+    {% set label = 'Download their full response' %}
   {% endif %}
+
+  <div class="form-group">
+    <h3 class="heading-small">{{ t('Full response') }}</h3>
+    {{ internalLink(t(label), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }), 'block') }}
+  </div>
 {% endmacro %}
 
 {% block content %}
@@ -90,7 +84,7 @@
           {{ evidenceFragment(claim.response.evidence) }}
         {% endif %}
 
-        {{ downloadDQs() }}
+        {{ fullResponseFragment() }}
       {% elif alreadyPaid %}
         {% if partiallyPaid %}
           <p>{{ t('{{ defendantName }} said they paid you {{ amount }}. They said this is all they owe, not the amount you claimed.', { defendantName: defendantName, amount: claim.response.amount | numeral }) }}</p>
@@ -105,7 +99,7 @@
             {{ timelineFragment(claim.response.timeline) }}
           {% endif %}
 
-          {% if claim.response.evidence %}
+          {% if claim.response.evidence and claim.response.evidence.rows.length > 0 %}
             {{ evidenceFragment(claim.response.evidence) }}
           {% endif %}
         {% else %}
@@ -136,9 +130,9 @@
           }}
         {% endif %}
 
-          {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
-
+        {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
         {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
+        {{ fullResponseFragment() }}
       {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
         {% if page === 0 %}
           <p>{{ t('{{ defendantName }} admits they owe you {{ amount }}. They don’t believe they owe the full amount claimed.', { defendantName: defendantName, amount: claim.response.amount | numeral }) }}</p>
@@ -165,7 +159,6 @@
           {% if claim.response.evidence and claim.response.evidence.rows.length > 0 %}
             {{ evidenceFragment(claim.response.evidence) }}
           {% endif %}
-          {{ downloadDQs() }}
         {% elseif page === 1 %}
           {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
             <p>{{ t('The defendant suggested this repayment plan:') }}</p>
@@ -181,14 +174,9 @@
 
           {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
           {{ financialDetailsBlock(claim, 'Their finances', 'See their financial details', 'form-group') }}
-
+          {{ fullResponseFragment() }}
         {% endif %}
       {% endif %}
-
-      <div class="form-group">
-        <h3 class="heading-small">{{ t('Full response') }}</h3>
-        {{ internalLink(t('Download their full response and hearing requirements '), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }), 'block') }}
-      </div>
 
       <form novalidate method="post">
         {{ csrfProtection(csrf) }}
