--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -100,8 +100,13 @@
 {% from "./claimStatus/redeterminationRequestedDefendant.njk" import redeterminationDefendantClaimDetails %}
 {% from "./claimStatus/redeterminationRequestedClaimant.njk" import redeterminationClaimantClaimDetails %}
 
-{% from "./claimStatus/partAdmitRejectionClaimant.njk" import partAdmitRejectedByClaimantClaimDetails %}
-{% from "./claimStatus/partAdmitRejectionDefendant.njk" import partAdmitRejectedByClaimantDefendantClaimDetails %}
+{% from "./claimStatus/partAdmitRejectionClaimant.njk" import
+  partAdmitRejectedByClaimantClaimDetails,
+  partAdmitRejectedByClaimantDQClaimDetails %}
+
+{% from "./claimStatus/partAdmitRejectionDefendant.njk" import
+  partAdmitRejectedByClaimantDefendantClaimDetails,
+  partAdmitRejectedByClaimantDefendantDQClaimDetails %}
 
 {% from "./claimStatus/breachOfPaymentDefendant.njk" import
   CCJAfterBreakingSettlementAgreementClaimDetails,
@@ -194,6 +199,8 @@
       {{ requestCCJ(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
       {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION_DQ %}
+      {{ partAdmitRejectedByClaimantDQClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
       {{ settlementAgreementRejectedClaimantClaimDetails(claim, csrf) }}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_STATES_PAID %}
@@ -286,6 +293,8 @@
         {{ offerSettlementReachedForDefendant(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
         {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
+      {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION_DQ %}
+        {{ partAdmitRejectedByClaimantDefendantDQClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_BUSINESS_RESPONSE %}
         {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
       {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
