Add in missing content

--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -58,7 +58,8 @@
 
   <div class="form-group">
     <h3 class="heading-small">{{ t('Full response') }}</h3>
-    <p>{{ internalLink(t(label), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }), 'block') }}(PDF)</p>
+    <p>{{ internalLink(t(label), ResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId })) }}
+    {{ t('(PDF)') }}</p>
   </div>
 {% endmacro %}
 
