--- a/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
+++ b/src/main/common/components/free-mediation/freeMediationCheckAndSendBlock.njk
@@ -1,7 +1,7 @@
 {% from "table.njk" import tableStart, tableEnd, row %}
 
 {% macro freeMediationBlock(claim, mediationDraft, contactPerson, contactNumber, mediationPilot, mediationEnabled) %}
-  {{ tableStart('freeMediation', 'Free telephone mediation') }}
+  {{ tableStart('freeMediation', 'Mediation') }}
   {% if not mediationEnabled %}
     {{ row(
       label = 'Free mediation?',
