--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -185,7 +185,7 @@
 
       {% if mediationEnabled %}
         {% if draft.intentionToProceed.proceed.option === YesNoOption.YES.option and claim.response.freeMediation === YesNoOption.YES.option %}
-          {{ freeMediationBlock(claim, draft, mediationDraft, contactPerson, contactNumber) }}
+          {{ freeMediationBlock(claim, mediationDraft, contactPerson, contactNumber, mediationPilot, mediationEnabled) }}
         {% endif %}
       {% endif %}
 
